kubernetes/apps/tekton-pipelines/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
  labels:
    istio.io/dataplane-mode: ambient
